syntax = "proto3";

package user;

service UserGrpcService{
	rpc GetPreferenceById(GetPreferenceByIdRequest) returns (GetPreferenceByIdResult);
}
message GetPreferenceByIdRequest{
	string Id = 1;
}
message GetPreferenceByIdResult{
	PreferenceResponse PreferenceDto = 1;
}
message PreferenceResponse{
	string UserId = 1;
	repeated ChannelPreference Preference = 2;
}
message ChannelPreference{
	ChannelType channel = 1;
	bool IsOptOut = 2;
}
enum ChannelType{
	INAPP = 0;
	EMAIL = 1;
	PUSH = 2;
}
